force-app/main/default/objects/Flight_Schedule__c/Flight_Schedule__c.object-meta.xml
<CustomObject>
    <description>Flight Schedule Master</description>
    <label>Flight Schedule</label>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>