force-app/main/default/objects/Flight_Schedule__c/fields/Actual_Flight_Departure__c.field-meta.xml
<CustomField>
    <fullName>Actual_Flight_Departure__c</fullName>
    <label>Actual Date Time of Departure</label>
    <type>DateTime</type>
</CustomField>