force-app/main/default/objects/Flight_Schedule__c/fields/Actual_Time_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_of_Arrival__c</fullName>
    <label>Actual Time of Arrival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>