force-app/main/default/objects/Flight_Schedule__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>