force-app/main/default/objects/Flight_Schedule__c/fields/AirLine1__c.field-meta.xml
<CustomField>
    <fullName>AirLine1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AirLine</label>
    <referenceTo>AirLine1__c</referenceTo>
    <relationshipLabel>Flight Schedules</relationshipLabel>
    <relationshipName>Flight_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>