force-app/main/default/objects/Flight_Schedule__c/fields/Airline_Name1__c.field-meta.xml
<CustomField>
    <fullName>Airline_Name1__c</fullName>
    <formula>AirLine1__r.Airline_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AirLine Name.</label>
    <type>Text</type>
</CustomField>