force-app/main/default/objects/Flight_Schedule__c/fields/Airline_Name__c.field-meta.xml
<CustomField>
    <fullName>Airline_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline Name</label>
    <referenceTo>Airline__c</referenceTo>
    <relationshipLabel>Flight Schedules</relationshipLabel>
    <relationshipName>Flight_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>