force-app/main/default/objects/Flight_Schedule__c/fields/Arrival_Bay_Number__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Bay_Number__c</fullName>
    <label>Arrival Bay Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>