force-app/main/default/objects/Flight_Schedule__c/fields/CMS_Value__c.field-meta.xml
<CustomField>
    <fullName>CMS_Value__c</fullName>
    <label>CMS Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>