force-app/main/default/objects/Flight_Schedule__c/fields/Created_In_SpiceJet_System__c.field-meta.xml
<CustomField>
    <fullName>Created_In_SpiceJet_System__c</fullName>
    <label>Created In SpiceJet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>