force-app/main/default/objects/Flight_Schedule__c/fields/Delay_Code__c.field-meta.xml
<CustomField>
    <fullName>Delay_Code__c</fullName>
    <label>Delay Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>