force-app/main/default/objects/Flight_Schedule__c/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>