force-app/main/default/objects/Flight_Schedule__c/fields/Departure_Bay_Number__c.field-meta.xml
<CustomField>
    <fullName>Departure_Bay_Number__c</fullName>
    <label>Departure Bay Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>