force-app/main/default/objects/Flight_Schedule__c/fields/Departure_Delay__c.field-meta.xml
<CustomField>
    <fullName>Departure_Delay__c</fullName>
    <label>Departure Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>