force-app/main/default/objects/Flight_Schedule__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>