force-app/main/default/objects/Flight_Schedule__c/fields/Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Airport</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transport__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Airport</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Flight Schedules (Destination Airport)</relationshipLabel>
    <relationshipName>Flight_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>