force-app/main/default/objects/Flight_Schedule__c/fields/Direct_or_Via__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_Via__c</fullName>
    <label>Direct or Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Via</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>