force-app/main/default/objects/Flight_Schedule__c/fields/Estimated_Time_To_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_To_Arrival__c</fullName>
    <label>Estimated Date Time of Arrival</label>
    <type>DateTime</type>
</CustomField>