force-app/main/default/objects/Flight_Schedule__c/fields/Flight_ID__c.field-meta.xml
<CustomField>
    <fullName>Flight_ID__c</fullName>
    <label>Flight ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>