force-app/main/default/objects/Flight_Schedule__c/fields/Flight_No_2__c.field-meta.xml
<CustomField>
    <fullName>Flight_No_2__c</fullName>
    <label>Flight No 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>