force-app/main/default/objects/Flight_Schedule__c/fields/Flight_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_3__c</fullName>
    <label>Flight Number 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>