force-app/main/default/objects/Flight_Schedule__c/fields/LegSequence__c.field-meta.xml
<CustomField>
    <fullName>LegSequence__c</fullName>
    <label>Leg Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>