force-app/main/default/objects/Flight_Schedule__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <label>Operational Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>