force-app/main/default/objects/Flight_Schedule__c/fields/Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Airport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Flight Schedules</relationshipLabel>
    <relationshipName>Flight_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>