force-app/main/default/objects/Flight_Schedule__c/fields/Origin_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport_Code__c</fullName>
    <formula>Origin_Airport__r.Airport_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Airport Code</label>
    <type>Text</type>
</CustomField>