force-app/main/default/objects/Flight_Schedule__c/fields/Scdeule_Id__c.field-meta.xml
<CustomField>
    <fullName>Scdeule_Id__c</fullName>
    <label>Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>