force-app/main/default/objects/Flight_Schedule__c/fields/Schedule_Time_To_Departure__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time_To_Departure__c</fullName>
    <label>Schedule Date Time of Departure</label>
    <type>DateTime</type>
</CustomField>