force-app/main/default/objects/Flight_Schedule__c/fields/Scheduled_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_Time__c</fullName>
    <label>Scheduled Date Time of Arrival</label>
    <type>Time</type>
</CustomField>