force-app/main/default/objects/Flight_Schedule__c/fields/Scheduled_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Departure_Time__c</fullName>
    <label>Scheduled Date Time of Departure</label>
    <type>Time</type>
</CustomField>