force-app/main/default/objects/Flight_Schedule__c/fields/Scheduled_Flight_Duration__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Flight_Duration__c</fullName>
    <formula>Scheduled_Arrival_Time__c -  Scheduled_Departure_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Flight Duration (In Mins))</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>