force-app/main/default/objects/Flight_Schedule__c/fields/Unique_Record_for_Batch__c.field-meta.xml
<CustomField>
    <fullName>Unique_Record_for_Batch__c</fullName>
    <formula>Name</formula>
    <label>Unique Record for Batch</label>
    <type>Text</type>
</CustomField>