force-app/main/default/objects/Flight_Schedule__c/fields/Updated_In_SpiceJet_System__c.field-meta.xml
<CustomField>
    <fullName>Updated_In_SpiceJet_System__c</fullName>
    <label>Updated In SpiceJet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>