force-app/main/default/objects/Flight_Schedule__c/fields/Valuable_Cargo_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Valuable_Cargo_Acceptance__c</fullName>
    <label>Valuable Cargo Acceptance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>