force-app/main/default/objects/Flight_Schedule__c/fields/Vulnerable_Cargo_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Vulnerable_Cargo_Acceptance__c</fullName>
    <label>Vulnerable Cargo Acceptance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>