force-app/main/default/objects/Flight_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Airline_Name1__c</columns>
    <columns>Origin__c</columns>
    <columns>Destination__c</columns>
    <columns>Scheduled_Departure_Time__c</columns>
    <columns>Actual_Flight_Departure__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Departure_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>