force-app/main/default/objects/Flight_Schedule__c/listViews/SpiceJet.listView-meta.xml
<ListView>
    <fullName>SpiceJet</fullName>
    <columns>NAME</columns>
    <columns>Departure_Date__c</columns>
    <columns>Origin__c</columns>
    <columns>Destination__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Airline_Name1__c</field>
        <operation>equals</operation>
        <value>SPICEJET</value>
    </filters>
    <label>SpiceJet</label>
</ListView>